<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
      <variable
          name="harcama"
          type="com.sbaltinsoy.gdg_bitirmeproje.harcamaOlustur.HarcamaOlusturViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedAciklama"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/aciklama"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toTopOf="@id/outlinedHarcama"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolBar"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputAciklama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedHarcama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/harcama"
            android:layout_margin="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/outlinedAciklama"
            app:layout_constraintBottom_toTopOf="@id/radioGroupTur">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputHarcama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioGroupTur"
            android:checkedButton="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/outlinedHarcama"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@id/radioGroupBirim">
            <RadioButton
                android:id="@+id/radio_button_fatura"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/fatura" />
            <RadioButton
                android:id="@+id/radio_button_kira"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/kira"
                android:layout_gravity="center"/>
            <RadioButton
                android:id="@+id/radio_button_diger"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/diger"
                android:layout_gravity="center"/>
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioGroupBirim"
            android:orientation="horizontal"
            android:layout_margin="20dp"
            android:checkedButton="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/radioGroupTur"
            app:layout_constraintBottom_toTopOf="@id/add_buton"
            app:layout_constraintVertical_chainStyle="packed">
            <RadioButton
                android:layout_marginStart="50dp"
                android:layout_margin="10dp"
                android:id="@+id/radio_button_tl"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tl" />
            <RadioButton
                android:layout_margin="10dp"
                android:id="@+id/radio_button_dolar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dolar" />
            <RadioButton
                android:layout_margin="10dp"
                android:id="@+id/radio_button_euro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/euro" />
            <RadioButton
                android:layout_margin="10dp"
                android:id="@+id/radio_button_sterlin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sterlin" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_buton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:text="@string/ekle"
            android:backgroundTint="@color/butonYaziRenk"
            android:textColor="@color/white"
            app:cornerRadius="20dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupBirim" />
        <TextView
            android:id="@+id/deneme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="30dp">

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

