<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="isim"
            type="com.sbaltinsoy.gdg_bitirmeproje.isimDetay.IsimDetayViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBarIsim"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedIsim"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/isminizi_giriniz"
            android:layout_marginTop="30dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toTopOf="@id/radioGroupCinsiyet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolBarIsim"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textIsim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:layout_marginTop="40dp"
            android:id="@+id/radioGroupCinsiyet"
            android:checkedButton="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/outlinedIsim"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@id/kaydet_button">
            <RadioButton
                android:id="@+id/radio_button_erkek"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/erkek" />
            <RadioButton
                android:id="@+id/radio_button_kadin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/kadin"
                android:layout_gravity="center"/>
            <RadioButton
                android:id="@+id/radio_button_belirtme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/belirtmek_istemiyorum"
                android:layout_gravity="center"/>
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/kaydet_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/kaydet"
            android:backgroundTint="@color/butonYaziRenk"
            android:textColor="@color/white"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupCinsiyet" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>