<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".onBoarding.Screens.FirstScreenFragment">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/texOnBoardView1"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5"
            app:lottie_autoPlay="true"
            app:layout_constraintVertical_chainStyle = "packed"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/deneme" />

        <TextView
            android:id="@+id/texOnBoardView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/animationView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/texOnBoardView2"
            app:layout_constraintVertical_chainStyle = "packed"
            android:gravity="center"
            android:padding="@dimen/tw_padding"
            android:textSize="@dimen/textsize_screens"
            android:text="@string/first_screen_text_top"/>

        <TextView
            android:id="@+id/texOnBoardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/texOnBoardView1"
            app:layout_constraintVertical_chainStyle = "packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:textSize="@dimen/textsize_screens"
            android:text="@string/first_screen_text_bottom"/>



        <Button
            android:id="@+id/next_buton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cornerRadius="@dimen/b_radius"
            android:layout_margin="@dimen/b_margin"
            style="?attr/materialButtonOutlinedStyle"
            android:textColor="#fece2f"
            android:text="@string/gec"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>